# weaver

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  install.ps1  package-lock.json  package.json
.github/workflows/: release.yml
docs/: architecture copy.md  cli.md  local-development.md  promotion-drafts.md
scripts/: mqtt-test-mission.sh
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: actions.rs  cli.rs  debug_log.rs  lib.rs  main.rs  polling.rs  settings.rs  web_server.rs
src-tauri/src/conductor/: actions.rs  aggregator.rs  engine.rs  mod.rs  types.rs
src-tauri/src/executor/: mod.rs  monitor.rs  pipeline.rs  spawner.rs
src-tauri/src/mqtt/: assignment.rs  client.rs  control.rs  heartbeat.rs  mod.rs  state_cache.rs  types.rs
src-tauri/src/session/: conversation.rs  cost.rs  custom_names.rs  detector.rs  enrichment.rs  history.rs  mod.rs  parser.rs  sanitize.rs  status.rs
src-tauri/src/supervisor/: agent.rs  mod.rs  rules.rs
src-tauri/src/workspace/: autopilot.rs  claude_md.rs  git.rs  mod.rs  scanner.rs
src-tauri/tests/fixtures/: test-weaver-plan.json
src/lib/: api.ts  shortcuts.ts  types.ts
src/lib/components/: ActivityFeed.svelte  CompletedMissionRow.svelte  CostTracker.svelte  DebugConsole.svelte  DeviceStatus.svelte  ExpandedCardOverlay.svelte  FdaBanner.svelte  FuzzyMissionSearch.svelte  HistoryCardOverlay.svelte  InterventionInput.svelte  KeyboardShortcutOverlay.svelte  LiveStream.svelte  MemoryViewer.svelte  MessageBubble.svelte  MessageNavMap.svelte  MissionAcceptFlow.svelte  MissionHeader.svelte  MissionListItem.svelte  MissionOverview.svelte  MissionPipeline.svelte  MissionPipelineCard.svelte  MissionSidebar.svelte  NotificationPermissionBanner.svelte  PageHeader.svelte  PhaseAccordion.svelte  PhaseList.svelte  PromptInput.svelte  QRCodeModal.svelte  SessionHistory.svelte  SessionItem.svelte  SessionList.svelte  StatusBar.svelte  SupervisorBar.svelte  SupervisorPanel.svelte  TaskCard.svelte  ToastNotifications.svelte  TodoItem.svelte  WeavySidebar.svelte  index.ts
src/lib/stores/: activity.ts  missions.ts  mqtt.ts  supervisor.ts  tasks.ts  workspace.ts
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/popover/: +page.svelte
weaver-plugin/: .mcp.json
weaver-plugin/.claude-plugin/: plugin.json
weaver-plugin/agents/: architect.md  implementer.md  reviewer.md
weaver-plugin/channels/weaver-channel/: README.md  index.ts  package.json
weaver-plugin/hooks/: hooks.json
weaver-plugin/skills/phase-workflow/: SKILL.md
website/: wrangler.toml
website/public/: robots.txt
website/src/components/: Compatibility.astro  DocsSidebar.astro  FAQ.astro  Features.astro  Hero.astro  InstallCTA.astro  Landing.astro  TechStack.astro
(+20 files in other folders)
