[package]
name = "c9watch"
version = "0.5.0"
description = "Monitor and control all your Claude Code sessions from one place"
authors = ["minchenlee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "c9watch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["gui", "cli"]
gui = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
    "dep:tauri-plugin-sharekit",
    "dep:axum",
    "dep:tokio",
    "dep:rand",
    "dep:qr2term",
    "dep:rust-embed",
    "dep:mime_guess",
    "dep:base64",
    "dep:tauri-nspanel",
]
cli = ["dep:clap", "dep:regex"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
# ── Core (always included) ───────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
chrono = "0.4"
libc = "0.2.180"

# ── GUI-only dependencies ────────────────────────────────────────────
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-sharekit = { version = "0.3", optional = true }
axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync"], optional = true }
rand = { version = "0.8", optional = true }
qr2term = { version = "0.3", optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
base64 = { version = "0.22", optional = true }

# ── CLI-only dependencies ────────────────────────────────────────────
clap = { version = "4", features = ["derive"], optional = true }
regex = { version = "1", optional = true }

# ── macOS GUI-only ───────────────────────────────────────────────────
# tauri-nspanel provides NSPanel support for the popover (above fullscreen apps).
# It depends on tauri, so it must be optional and gated behind the gui feature.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "da9c9a8d4eb7f0524a2508988df1a7d9585b4904", optional = true }
